# agentic-startup-studio-boilerplate

./: .automation-scope.yaml  .coveragerc  .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  ADVANCED_SDLC_SUMMARY.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.json  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_ENHANCEMENT_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_GENERATION_4_COMPLETION.md  AUTONOMOUS_SDLC_GENERATION_COMPLETE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONSCIOUSNESS_QUANTUM_RESEARCH_METHODOLOGY.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DQCEO_RESEARCH_COMPLETION_REPORT.md  Dockerfile  Dockerfile.optimized  Dockerfile.production  GENERATION_6_QBIS_RESEARCH_PUBLICATION_REPORT.md  GENERATION_8_QUANTUM_SINGULARITY_BREAKTHROUGH_REPORT.md  GETTING_STARTED.md  GITHUB_ACTIONS_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_DOCUMENTATION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  (+71 more)
.devcontainer/: bashrc  devcontainer.json  post-create.sh
.github/: CODEOWNERS  MODERNIZATION_ROADMAP.md  PERFORMANCE.md  PULL_REQUEST_TEMPLATE.md  TECHNICAL_DEBT.md  dependabot.yml  project-metrics.json  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: README.md  cd.yml  ci.yml  dependency-management.yml  monitoring.yml  performance.yml  security.yml
.terragon/: BACKLOG.md  README.md  autonomous_executor.py  backlog.json  learning_engine.py  requirements.txt  terragon_scheduler.py  terragon_swarm_command.sh  value-config.yaml  value_discovery_engine.py
deployment/: global_compliance_framework.yaml  global_generation_7_infrastructure.yaml  global_quantum_consciousness_infrastructure.yaml  quantum_production_orchestrator.py
deployment/docker/: Dockerfile.gen5  entrypoint.sh  healthcheck.sh
deployment/terraform/: global_cloud_infrastructure.tf
docs/: ADVANCED_DEPLOYMENT_STRATEGIES.md  ADVANCED_SDLC_WORKFLOWS.md  AI_MLOPS_INTEGRATION_FRAMEWORK.md  ARCHITECTURE.md  ARCHITECTURE_MODERNIZATION.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  REQUIREMENTS.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0001-adr-template.md  0002-technology-stack-selection.md  0003-crewai-agent-orchestration.md  0004-containerization-strategy.md  001-react-frontend.md  002-fastapi-backend.md  003-crewai-agents.md  004-postgresql-database.md  005-kubernetes-orchestration.md  README.md
docs/deployment/: README.md
docs/github-workflows-ready-to-deploy/: cd.yml  ci.yml  release.yml  security.yml
docs/guides/: README.md  build-deployment.md  monitoring.md  testing.md
docs/monitoring/: README.md
docs/runbooks/: deployment.md  incident-response.md  performance-degradation.md  service-down.md
docs/security/: dependency-check-report.json  sast-report.json  sbom.json  security-summary.json
docs/status/: 2025-07-26.json  2025-07-27.json  2025-08-12.json  backlog-report-2025-07-26.md  execution-log.json
docs/testing/: README.md
docs/workflows/: README.md  setup-instructions.md  slsa-compliance.md
i18n/: generation_7_localization.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  quantum-deployment.yaml  rbac.yaml  service.yaml
monitoring/: alert_rules.yml  prometheus-production.yml  prometheus.yml  quantum_alerts.yml
monitoring/logging/: fluent-bit.conf  parsers.conf
monitoring/tracing/: jaeger-config.yml
nginx/: nginx.conf
quantum_task_planner/: __init__.py  cli.py  enhanced_main.py  optimized_main.py  robust_main.py  simple_main.py
quantum_task_planner/api/: __init__.py  advanced_quantum_dashboard.py  autonomous_api_enhancement.py  production_quantum_orchestrator.py  quantum_api.py  quantum_dashboard.py
quantum_task_planner/core/: __init__.py  advanced_quantum_agent.py  advanced_quantum_optimizer.py  async_executor.py  entanglement_manager.py  quantum_consciousness_engine.py  quantum_neural_optimizer.py  quantum_optimizer.py  quantum_scheduler.py  quantum_task.py  robust_quantum_task.py  simple_entanglement.py  simple_optimizer.py
quantum_task_planner/distributed/: __init__.py  quantum_sync.py  simple_sync.py
quantum_task_planner/evolution/: __init__.py  adaptive_quantum_framework.py  autonomous_evolution_engine.py  generation_4_autonomous_consciousness.py  generation_7_meta_learning_consciousness.py  meta_learning_consciousness.py  self_improving_algorithms.py
quantum_task_planner/ml/: __init__.py  quantum_ml_optimizer.py
quantum_task_planner/monitoring/: autonomous_health_system.py  quantum_health_orchestrator.py
quantum_task_planner/multimodal/: __init__.py  multimodal_ai_orchestrator.py
quantum_task_planner/orchestration/: __init__.py  global_orchestration_engine.py
quantum_task_planner/performance/: __init__.py  advanced_cache.py  auto_scaling.py  cache.py  concurrent.py  hyperscale_performance_engine.py  hyperscale_quantum_optimizer.py  quantum_cache.py  quantum_performance_optimizer.py  quantum_scaling.py  scaling.py  simple_cache.py  simple_concurrent.py  simple_scaling.py
quantum_task_planner/research/: __init__.py  advanced_quantum_consciousness_engine.py  autonomous_research_orchestrator.py  autonomous_research_pipeline.py  bio_quantum_coherence_preservation_engine.py  breakthrough_quantum_consciousness_algorithms.py  consciousness_quantum_hybrid_optimizer.py  (+12 more)
scripts/: deploy.sh  generate-dashboard.sh  health_check.py  research_validation_runner.py  validate-workflows.py  validate_research_implementation.py
tests/: __init__.py  conftest.py  test_api_integration.py  test_comprehensive_integration.py  test_comprehensive_quantum.py  test_consciousness_quantum_hybrid_optimizer.py  test_dynamic_quantum_classical_optimizer.py  test_experimental_research_framework.py  test_performance_benchmarks.py  test_quantum_scheduler.py  test_quantum_task.py
{{cookiecutter.project_slug}}/: .env.example  dev  docker-compose.yml
(+107 files in other folders)
